--- a/config.yml
+++ b/config.yml
@@ -1,25 +1,8 @@
 services:
-  # The shell-app-runtime is a dependency of shell-event-publisher.
-  # without it, shell events are only published when windows switch focus,
-  # and the events don't contain as much information
-  # This also enables the Windows menu, even when the SHELLPROC intercepts it.. investigate
-  shell-app-runtime: 
-    executable: C:\Windows\System32\ShellAppRuntime.exe
-    autorestart: false
-  # This one creates a bottom-most drawing context and renders 
-  # an image. It would be cool if it had some custom shader support
-  # shell-background:
-  #   executable: go
-  #   autorestart: false 
-  #   visible: true
-  #   arguments:
-  #     - run 
-  #     - ./cmd/background/
+  # background:
+  #   autorestart: false
+  #   executable: ./bin/background.exe
   #   workingdirectory: C:/Users/alexw/repos/minimalist-shell
-  background:
-    autorestart: false
-    executable: ./bin/background.exe
-    workingdirectory: C:/Users/alexw/repos/minimalist-shell
   shell-event-publisher:
     autorestart: false
     executable: ./bin/shell-event-publisher.exe
