--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,14 @@
 services:
-  # background:
-  #   autorestart: false
-  #   executable: ./bin/background.exe
-  #   workingdirectory: C:/Users/alexw/repos/minimalist-shell
+  background:
+    autorestart: false
+    executable: ./bin/background.exe
+    workingdirectory: C:/Users/alexw/repos/minimalist-shell
+    custom:
+      background:
+        path: C:/Users/alexw/Documents/wallpaper.png
+      render:
+        updaterate: 500 # Update rate in milliseconds
+        clearcolor: #ac21c4
   shell-event-publisher:
     autorestart: false
     executable: ./bin/shell-event-publisher.exe
@@ -40,4 +46,28 @@ services:
     forwardstdout: false
     forwardstderror: false
     forwardstdin: false
+  hotkey-manager:
+    autorestart: false
+    executable: ./bin/hotkey-manager.exe
+    workingdirectory: C:/Users/alexw/repos/minimalist-shell
+    custom:
+      keymap:
+        - keys: ctrl+alt+shift+b 
+          actions: 
+            - nats pub WindowControls.ShowBorder
+        - keys: ctrl+alt+b 
+          actions: 
+            - nats pub WindowControls.HideBorder
+        - keys: ctrl+win+left
+          actions:
+            - nats pub WindowControls.TileLeft
+        - keys: ctrl+win+right
+          actions:
+            - nats pub WindowControls.TileRight
+        - keys: ctrl+win+up
+          actions:
+            - nats pub WindowControls.Maximize
+        - keys: ctrl+win+w 
+          actions: 
+            - nats pub WindowControls.Cycle
 
