--- a/config.yml
+++ b/config.yml
@@ -13,6 +13,7 @@ services:
         # clearcolor: "#701278"
   events:
     executable: ./events.exe
+    enabled: true
   driver:
     executable: ./driver.exe
     custom:
@@ -35,6 +36,7 @@ services:
             watch: true
   hotkeys:
     executable: ./hotkeys.exe
+    enabled: true
     custom:
       keymap:
         - keys: ctrl+alt+r
