--- a/config.yml
+++ b/config.yml
@@ -13,6 +13,10 @@ services:
         # clearcolor: "#701278"
   events:
     executable: ./events.exe
+    custom:
+      keyboardevents: false 
+      shellevents: false
+      cbtevents: true
   driver:
     executable: ./driver.exe
     custom:
