Add support for mouse events
Move types around. Stop using syscall and use sys/windows

--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,8 @@ services:
       clearcolor: 423
   events:
     executable: ./events.exe
-    keyboardeventsll: false
+    keyboardevents: false
+    mouseevents: true
     shellevents: true
   driver:
     executable: ./driver.exe
